syntax = "proto3";

option go_package = "./;hot";

package account;

service Account {
  rpc GetAccountInfo(AccountRequest) returns (AccountResponse) {}
  rpc SetAccountType(AccountTypeRequest) returns (AccountTypeResponse) {}
}

enum Type {
  Wx = 0;
  App = 1;
}

message AccountRequest {
  string account = 1;
}

message AccountResponse {
  string account = 1;
  Type client_type = 2;
  string security_code = 3;
  string create_time = 4;
}

message AccountTypeRequest {
  Type type = 1;
  string account = 2;
}

message AccountTypeResponse {
  bool is_success = 1;
}
